tests/ui/fn/bad-turbofish-hints-issue-121901.stderr
error: expected one of `+`, `,`, or `>`, found `)`
  --> $DIR/bad-turbofish-hints-issue-121901.rs:3:40
   |
LL | type One = for<'a> fn(Box<dyn Send + 'a);
   |                                        ^ expected one of `+`, `,`, or `>`
   |
help: you might have meant to end the type parameters here
   |
LL | type One = for<'a> fn(Box<dyn Send + 'a>);
   |                                        +

error: unmatched angle bracket
  --> $DIR/bad-turbofish-hints-issue-121901.rs:5:41
   |
LL | type Two = for<'a> fn(Box<dyn Send + 'a>>);
   |                                         ^
   |
help: remove extra angle bracket
   |
LL - type Two = for<'a> fn(Box<dyn Send + 'a>>);
LL + type Two = for<'a> fn(Box<dyn Send + 'a>);
   |

error: aborting due to 2 previous errors

